# Rtype

./: .gitignore  CMakeLists.txt  FindSqlite3.cmake  README.md  conanfile.txt  doc_r-type  protocol-rfc.txt  run  run_client  run_server  run_tests  table.txt
client/: CMakeLists.txt  Component.cpp  main.cpp
client/Components/: ComponentManager.cpp
client/Entities/: EntityManager.cpp
client/Systems/: SystemManager.cpp
client/entities/: Entity.cpp
client/include/: Component.hpp  ComponentManager.hpp  Root.hpp  TcpClient.hpp  UdpClient.hpp
client/include/Audio/: AudioManager.hpp
client/include/Audio/Portaudio/: Callback.hpp  Error.hpp  Global.hpp  Portaudio.hpp  Stream.hpp  data.h
client/include/Cache/: Cache.hpp
client/include/Cache/Json/: Array.hpp  Error.hpp  Json.hpp  Object.hpp  Parser.hpp  Property.hpp  Value.hpp
client/include/Codec/: IDecoder.hpp  IEncoder.hpp
client/include/Codec/Opus/: Decoder.hpp  Encoder.hpp  Error.hpp  Opus.hpp  data.h
client/include/Components/: Component.hpp  ComponentManager.hpp  PositionComponent.hpp  TagComponent.hpp
client/include/Entities/: Entity.hpp  EntityManager.hpp
client/include/Network/: ClientSocket.hpp  Error.hpp  IClientSocket.hpp  NetworkManager.hpp  TCPSocket.hpp  UDPSocket.hpp
client/include/QT/: MainWindow.hpp
client/include/QT/Widget/: ChangeProfilPage.hpp  CreateAccountPage.hpp  IWidget.hpp  LoginPage.hpp  UserPage.hpp  WidgetManager.hpp
client/include/Systems/: PositionSystem.hpp  System.hpp  SystemManager.hpp
client/include/component/: Component.hpp  ComponentManager.hpp  Player.hpp  Position.hpp  Sound.hpp  Sprite.hpp  Text.hpp  Velocity.hpp
client/include/engine/: Engine.hpp  EngineError.hpp  Renderer.hpp  Scene.hpp  SceneManager.hpp
client/include/systems/: GameScreenSystem.hpp  InputSystem.hpp  JoinScreenSystem.hpp  LobbyScreenSystem.hpp  MenuScreenSystem.hpp  MonsterLoaderSystem.hpp  NetworkSystem.hpp  ParallaxSystem.hpp  PlayerSystem.hpp  PositionSystem.hpp  SoundSystem.hpp  SpriteSystem.hpp  System.hpp  SystemManager.hpp  Systems.hpp  TextSystem.hpp  TitleScreenSystem.hpp  VelocitySystem.hpp
client/json/: DefaultCache.json
client/monsters/: Dependancies.hpp  Frog.cpp
client/src/: Root.cpp
client/src/Audio/Portaudio/: Portaudio.cpp
client/src/Cache/: Cache.cpp
client/src/QT/: MainWindow.cpp
client/src/QT/Widget/: ChangeProfilPage.cpp  ChangeProfilPage.ui  CreateAccountPage.cpp  CreateAccountPage.ui  LoginPage.cpp  LoginPage.ui  UserPage.cpp  UserPage.ui
client/src/engine/: Engine.cpp  Renderer.cpp
client/src/systems/: GameScreenSystem.cpp  InputSystem.cpp  JoinScreenSystem.cpp  LobbyScreenSystem.cpp  MenuScreenSystem.cpp  MonsterLoaderSystem.cpp  NetworkSystem.cpp  ParallaxSystem.cpp  PlayerSystem.cpp  PositionSystem.cpp  SoundSystem.cpp  SpriteSystem.cpp  TcpClient.cpp  TextSystem.cpp  TitleScreenSystem.cpp  VelocitySystem.cpp
doc/: client_specs.rst  database.rst  doc.rst  protocol.rst  table.rst
html/: ComponentManager_8hpp_source.html  Component_8hpp_source.html  EngineError_8hpp_source.html  Engine_8hpp_source.html  Entity_8hpp_source.html  GameScreenSystem_8hpp_source.html  HitboxSystem_8hpp_source.html  Hitbox_8hpp_source.html  InputSystem_8hpp_source.html  JoinScreenSystem_8hpp_source.html  LobbyScreenSystem_8hpp_source.html  MenuScreenSystem_8hpp_source.html  MonsterLoaderSystem_8hpp_source.html  NetworkSystem_8hpp_source.html  PackagesType_8hpp_source.html  Packages_8hpp_source.html  ParallaxSystem_8hpp_source.html  PositionSystem_8hpp_source.html  Position_8hpp_source.html  Renderer_8hpp_source.html  SceneManager_8hpp_source.html  Scene_8hpp_source.html  ServerEngine_8hpp_source.html  ServerGame_8hpp_source.html  SpriteSystem_8hpp_source.html  Sprite_8hpp_source.html  StatusSystem_8hpp_source.html  Status_8hpp_source.html  SystemManager_8hpp_source.html  System_8hpp_source.html  TextSystem_8hpp_source.html  Text_8hpp_source.html  TitleScreenSystem_8hpp_source.html  VelocitySystem_8hpp_source.html  Velocity_8hpp_source.html  annotated.html  classClock-members.html  classClock.html  classComponentManager-members.html  classComponentManager.html  (+118 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  (+46 more)
latex/: annotated.tex  classClock.tex  classComponentManager.tex  classEngineError.eps  classEngineError.tex  classEngine_1_1Component.eps  classEngine_1_1Component.tex  classEngine_1_1Engine.tex  classEngine_1_1EntityManager.tex  classEngine_1_1GameScreenSystem.tex  classEngine_1_1HitboxSystem.eps  classEngine_1_1HitboxSystem.tex  classEngine_1_1InputSystem.eps  classEngine_1_1InputSystem.tex  classEngine_1_1JoinScreenSystem.tex  classEngine_1_1LobbyScreenSystem.tex  classEngine_1_1MenuScreenSystem.tex  classEngine_1_1MonsterLoaderError.eps  classEngine_1_1MonsterLoaderError.tex  classEngine_1_1MonsterLoaderSystem.tex  classEngine_1_1NetworkSystem.eps  classEngine_1_1NetworkSystem.tex  classEngine_1_1ParallaxSystem.tex  classEngine_1_1PositionSystem.eps  classEngine_1_1PositionSystem.tex  classEngine_1_1Renderer.tex  classEngine_1_1SceneManager.tex  classEngine_1_1SpriteSystem.eps  classEngine_1_1SpriteSystem.tex  classEngine_1_1StatusSystem.eps  classEngine_1_1StatusSystem.tex  classEngine_1_1System.tex  classEngine_1_1SystemManager.tex  classEngine_1_1TextSystem.eps  classEngine_1_1TextSystem.tex  classEngine_1_1TitleScreenSystem.tex  classEngine_1_1VelocitySystem.eps  classEngine_1_1VelocitySystem.tex  classServerEngine.tex  classServerGame.tex  (+27 more)
monsters/: CMakeLists.txt
monsters/src/: Dog.cpp  Frog.cpp
server/: CMakeLists.txt  main.cpp  server_rfc.md
server/include/: Packages.hpp  PackagesType.hpp  ServerEngine.hpp  ServerGame.hpp  TcpHandler.hpp  TcpManager.hpp  Test.hpp  UdpManager.hpp  UdpServer.hpp
server/include/components/: Hitbox.hpp  Status.hpp
server/include/systems/: HitboxSystem.hpp  StatusSystem.hpp
server/src/: ServerEngine.cpp  ServerGame.cpp  TcpHandler.cpp  TcpManager.cpp  Test.cpp  UdpServer.cpp
utils/: bson_specs.rst
(+17 files in other folders)
